kubernetes/apps/apps/uptimekuma/uptimekuma/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma
  labels:
    app: uptimekuma
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: uptimekuma
