kubernetes/apps/apps/uptimekuma/uptimekuma/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptimekuma
spec:
  parentRefs:
    - name: traefik
      namespace: networking
      sectionName: websecure-cloud
  hostnames:
    - uptime.cloud.traunseenet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: uptimekuma
          port: 80
